# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  flake.nix  fly.toml
.github/workflows/: fly-deploy.yml  general.yml
config/: default.yaml  production.yaml
migrations/: 20240321211918_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
