[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Mattielli <lomax79@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.4"
chrono = "0.4.35"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "migrate", "uuid", "chrono"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
axum-macros = "0.4.1"

[dev-dependencies]
reqwest = "0.11.26"
