[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Lorenzo Mattielli <lomax79@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.4"
chrono = "0.4.35"
config = "0.14.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "migrate", "uuid", "chrono"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
axum-macros = "0.4.1"
tracing = { version = "0.1.40", features = ["log"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tower = "0.4.13"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = "0.17.0"

[dev-dependencies]
reqwest = "0.11.26"
once_cell = "1.19.0"
claim = "0.5.0"
